--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.3",
+    "@types/axios": "^0.14.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/randomstring": "^1.1.8",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
